--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
-<html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <img src="images/logo.png">
-        <script src="index.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
+    <title>Oldagram</title>
+</head>
+<body>
+
+    <header>
+        <div class="container">
+            <div class="header-container">
+                <img class="logo" src="images/logo.png" alt="oldagram logo">
+                <img class="avatar" src="/images/user-avatar.png" alt="selfie of Per Borgen">
+            </div>
+        </div>
+    </header>
+    
+    <main>
+        <div class="container">
+            <div class="profile-info">
+                <img class="avatar" src="images/avatar-vangogh.jpg" alt="potrait of young Van Gogh">
+                <h2>Vincent van Gogh</h2>
+                <p>Zudert, Netherlands</p>
+            </div>
+            <img src="images/post-vangogh.jpg" alt="Van Gogh painting" class="vg-painting"> 
+        </div>
+    </main>
+
+    <script src="index.js"></script>
+</body>
 </html>
