added hover effect to icons

--- a/index.html
+++ b/index.html
@@ -22,24 +22,25 @@
     </header>
     
     <main>
-        <div class="container">
-            <div class="profile-header">
-                <img class="avatar" src="images/avatar-vangogh.jpg" alt="potrait of young Van Gogh">
-                <h2>Vincent van Gogh</h2>
-                <p>Zudert, Netherlands</p>
+        <section>
+            <div class="container">
+                <div class="profile-header">
+                    <img class="avatar" src="images/avatar-vangogh.jpg" alt="potrait of young Van Gogh">
+                    <h2>Vincent van Gogh</h2>
+                    <p>Zudert, Netherlands</p>
+                </div>
+                <img src="images/post-vangogh.jpg" alt="Van Gogh painting" class="vg-painting"> 
+                <div class="profile-footer">
+                    <img src="images/icon-heart.png" alt="heart icon" class="icon">
+                    <img src="images/icon-comment.png" alt="comment icon" class="icon">
+                    <img src="images/icon-dm.png" alt="direct message icon" class="icon">
+                    <h2>21 likes</h2>
+                    <h3 class="username">vincey1853</h3>
+                    <p class="user-comment">just took a few mushrooms lol</p>
+                </div>
+                <div class="divider"></div>
             </div>
-            <img src="images/post-vangogh.jpg" alt="Van Gogh painting" class="vg-painting"> 
-            <div class="profile-footer">
-                <img src="images/icon-heart.png" alt="heart icon" class="icon">
-                <img src="images/icon-comment.png" alt="comment icon" class="icon">
-                <img src="images/icon-dm.png" alt="direct message icon" class="icon">
-                <h2>21 likes</h2>
-                <h3 class="username">vincey1853</h3>
-                <p class="user-comment">just took a few mushrooms lol</p>
-            </div>
-            <div class="divider"></div>
-        </div>
-        
+        </section>
     </main>
 
     <script src="index.js"></script>
