--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h3 class="username">vincey1853</h3>
                     <p class="user-comment">just took a few mushrooms lol</p>
                 </div>
-                <div class="divider"></div>
+                <!-- <div class="divider"></div> -->
             </div>
         </section>
     </main>
