added comment in html

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                     <h3 class="username">vincey1853</h3>
                     <p class="user-comment">just took a few mushrooms lol</p>
                 </div>
+                <!-- commented out bottom divider as it didn't make sense 
+                     without having the other posts below -->
                 <!-- <div class="divider"></div> -->
             </div>
         </section>
